K1J-1229: Added mapping UnifiedDiagnosisList (#494)